force-app/main/default/objects/Account/fields/Municipality_Competitor_Selected__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Competitor_Selected__c</fullName>
    <inlineHelpText>Competitor selected by Municipality</inlineHelpText>
    <label>Municipality - Competitor Selected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DK - Alinea</fullName>
            </value>
            <value>
                <fullName>DK - Gyldendal</fullName>
            </value>
            <value>
                <fullName>DK - OK</fullName>
            </value>
            <value>
                <fullName>DK - Goforlag</fullName>
            </value>
            <value>
                <fullName>DK - Matematikfessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>