force-app/main/default/objects/Account/fields/Municipality_CSM__c.field-meta.xml
<CustomField>
    <fullName>Municipality_CSM__c</fullName>
    <description>Use for report</description>
    <formula>Municipality__r.CSM__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Municipality CSM</label>
    <type>Text</type>
</CustomField>