force-app/main/default/objects/Account/fields/Municipality_ID__c.field-meta.xml
<CustomField>
    <fullName>Municipality_ID__c</fullName>
    <formula>Municipality__r.Account_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipality ID 18-character</label>
    <type>Text</type>
</CustomField>