force-app/main/default/objects/Account/fields/Municipality_Implementation_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Implementation_Coordinator__c</fullName>
    <formula>Municipality__r.Implementation_Coordinator__r.FirstName  &amp; &quot; &quot; &amp;   Municipality__r.Implementation_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipality Implementation Coordinator</label>
    <type>Text</type>
</CustomField>