force-app/main/default/objects/Account/fields/Municipality_Name__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Name__c</fullName>
    <description>Display Municipality, if the field is blank &gt; Displays Account name instead</description>
    <formula>IF(
AND
( municipalityaccount__c = TRUE,ISBLANK(  Municipality__r.Name )), Name, 
Municipality__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Municipality, if the field is blank &gt; Displays Account name instead</inlineHelpText>
    <label>Municipality Name</label>
    <type>Text</type>
</CustomField>