force-app/main/default/objects/Account/fields/Municipality_Order_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Order_Subscriptions__c</fullName>
    <description>Populated by Demand Tool rule 9.1</description>
    <inlineHelpText>Count of active subscriptions paid for by the municipality</inlineHelpText>
    <label>Municipality Order Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>