force-app/main/default/objects/Account/fields/Municipality_Owner_ID_18_charachter__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Owner_ID_18_charachter__c</fullName>
    <formula>Municipality__r.Owner.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipality Owner ID 18-charachter</label>
    <type>Text</type>
</CustomField>