force-app/main/default/objects/Account/fields/municipalityaccount__c.field-meta.xml
<CustomField>
    <fullName>municipalityaccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Municipality</label>
    <type>Checkbox</type>
</CustomField>