force-app/main/default/objects/Account/fields/NAV_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>NAV_Bill_To_Account__c</fullName>
    <label>NAV Bill-To Account</label>
    <type>TextArea</type>
</CustomField>