force-app/main/default/objects/Account/fields/NAV_Bill_To_Account_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_Bill_To_Account_No__c</fullName>
    <externalId>true</externalId>
    <label>NAV Bill-To Account No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>