force-app/main/default/objects/Account/fields/NAV_Blocked2__c.field-meta.xml
<CustomField>
    <fullName>NAV_Blocked2__c</fullName>
    <description>From NAV Field Customer &quot;Blocked&quot;</description>
    <inlineHelpText>Blank: Account can be invoiced
Invoice: School cannot receive invoices
All: School cannot receive invoices and credit notes</inlineHelpText>
    <label>NAV Blocked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>