force-app/main/default/objects/Account/fields/NAV_Sell_to_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_Sell_to_Customer_No__c</fullName>
    <description>Use for Navision integration</description>
    <inlineHelpText>Use for Navision integration</inlineHelpText>
    <label>Sell-to Customer No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>