force-app/main/default/objects/Account/fields/NAV_Status__c.field-meta.xml
<CustomField>
    <fullName>NAV_Status__c</fullName>
    <description>Use for Navision integration</description>
    <inlineHelpText>Use for Navision integration</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>