force-app/main/default/objects/Account/fields/New_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Manager__c</fullName>
    <description>Used to log who will be the new account owner after the 2021 re.schuffle.</description>
    <label>New Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>