force-app/main/default/objects/Account/fields/New_Customer_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Date_Stamp__c</fullName>
    <description>Populate by Workflow
Shows when the Account first became a customer</description>
    <inlineHelpText>Shows the date this Account frst became a customer</inlineHelpText>
    <label>New Customer Date Stamp</label>
    <type>Date</type>
</CustomField>