force-app/main/default/objects/Account/fields/Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity_Date__c</fullName>
    <description>Next Activity Date in task &amp; events, update via Demandtools</description>
    <inlineHelpText>Next Activity Date in task &amp; events, update via Demandtools</inlineHelpText>
    <label>Next Activity Date</label>
    <type>Date</type>
</CustomField>