force-app/main/default/objects/Account/fields/Number_of_Students_4_9__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students_4_9__c</fullName>
    <description>Calculate value for class 4-9 Sweden</description>
    <formula>Middle__c +  High__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate value for class 4-9 Sweden</inlineHelpText>
    <label>Number of Students 4-9</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>