force-app/main/default/objects/Account/fields/numstudents__c.field-meta.xml
<CustomField>
    <fullName>numstudents__c</fullName>
    <inlineHelpText>Number of Students</inlineHelpText>
    <label>Number of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>