force-app/main/default/objects/Account/fields/Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for NAV integration to know when to create an Account in NAV.
Populated by process builder: Update Opportunities Won on Account</description>
    <inlineHelpText>If checked: this account has had an Opportunity marked as Won. Account sent to Navision
If unchecked: no Opportunity has been won.</inlineHelpText>
    <label>Opportunities Won</label>
    <type>Checkbox</type>
</CustomField>