force-app/main/default/objects/Account/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <description>Owner ID, use for reports</description>
    <formula>Owner.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Owner ID, use for reports</inlineHelpText>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>