force-app/main/default/objects/Account/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <description>Number of students</description>
    <inlineHelpText>Number of students</inlineHelpText>
    <label>Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>