force-app/main/default/objects/Account/fields/Products_Purchased_High__c.field-meta.xml
<CustomField>
    <fullName>Products_Purchased_High__c</fullName>
    <description>Process Builder: &quot;Account - Product Overview - Mass Update&quot;</description>
    <label>Products Purchased - High (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>