force-app/main/default/objects/Account/fields/Purchased_Products_Count__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Products_Count__c</fullName>
    <description>Data input by Demand Tool: &quot;9. Account - Subscription Count - Various Updates&quot;</description>
    <label>Purchased Products Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>