force-app/main/default/objects/Account/fields/Reference_Number_Check__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchase Order equivalent. Used for validiation, so Opps assigned to DD always include a reference number.
If Checked, the account will always require a reference number to be invoiced.</description>
    <inlineHelpText>Beställningsnummer / Ordrenummer / Purchase Order Number.
Needed for the customer to verify the Invoice.</inlineHelpText>
    <label>Reference Number Check</label>
    <type>Checkbox</type>
</CustomField>