force-app/main/default/objects/Account/fields/Revenue_Band__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Band__c</fullName>
    <formula>IF( Subscription_ACV__c  &lt;= 0, &quot;01. Delivery Contract Only&quot; ,
IF( Subscription_ACV__c &lt; 15000, &quot;02.1-15K&quot; ,
IF( Subscription_ACV__c &lt; 30000, &quot;03. 15K-30K&quot; ,
IF( Subscription_ACV__c &lt; 50000, &quot;04. 30K-50K&quot; ,
IF( Subscription_ACV__c &lt; 100000, &quot;05. 50K-100K&quot; ,
IF( Subscription_ACV__c &lt; 500000, &quot;06. 100K-500K&quot; , &quot;07. 500K+&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Band</label>
    <type>Text</type>
</CustomField>