force-app/main/default/objects/Account/fields/Revenue_Band_Locked__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Band_Locked__c</fullName>
    <description>Used to take a snapshot of the Revenue band at the beginning of the year.
Created to capture accounts with this revenue for the 2021 customer segmentation budget.</description>
    <label>Revenue Band Locked</label>
    <type>TextArea</type>
</CustomField>