force-app/main/default/objects/Account/fields/Revenue_Band_WF__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Band_WF__c</fullName>
    <label>Revenue Band WF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>