force-app/main/default/objects/Account/fields/Sales_Impl_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Impl_Meeting__c</fullName>
    <label>Sales &lt;&gt; Impl. Meeting</label>
    <type>Date</type>
</CustomField>