force-app/main/default/objects/Account/fields/School_Closed__c.field-meta.xml
<CustomField>
    <fullName>School_Closed__c</fullName>
    <inlineHelpText>Enter date when you know this school has stopped operating.</inlineHelpText>
    <label>School Closed</label>
    <type>Date</type>
</CustomField>