force-app/main/default/objects/Account/fields/School_Closed_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>School_Closed_Checkbox__c</fullName>
    <description>Use for report</description>
    <formula>AND( 
NOT ISBLANK (School_Closed__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Closed Checkbox</label>
    <type>Checkbox</type>
</CustomField>