force-app/main/default/objects/Account/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <inlineHelpText>Choose School Type</inlineHelpText>
    <label>School Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indskoling</fullName>
            </value>
            <value>
                <fullName>Mellemtrin</fullName>
            </value>
            <value>
                <fullName>Udskoling</fullName>
            </value>
            <value>
                <fullName>10. klasse mv</fullName>
            </value>
            <value>
                <fullName>Preschool</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Adult Further Education</fullName>
            </value>
            <value>
                <fullName>Special Needs School</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
            <value>
                <fullName>Efterskole</fullName>
            </value>
            <value>
                <fullName>Folkebibliotek</fullName>
            </value>
            <value>
                <fullName>Language Center</fullName>
            </value>
            <value>
                <fullName>Seminarium</fullName>
            </value>
            <value>
                <fullName>SOSU</fullName>
            </value>
            <value>
                <fullName>Ungdomsskole</fullName>
            </value>
            <value>
                <fullName>Lågstadiet</fullName>
            </value>
            <value>
                <fullName>Mellanstadiet</fullName>
            </value>
            <value>
                <fullName>Högstadiet</fullName>
            </value>
            <value>
                <fullName>Gymnasium</fullName>
            </value>
            <value>
                <fullName>Not Applicable - Organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>