force-app/main/default/objects/Account/fields/Segment_DK__c.field-meta.xml
<CustomField>
    <fullName>Segment_DK__c</fullName>
    <description>Acc. to 2022 segmentation for Denmark</description>
    <inlineHelpText>DK Only - Choose relevant category according to 2022 segmentation criteria for Denmark</inlineHelpText>
    <label>Segment - DK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>All Private</fullName>
            </value>
            <value>
                <fullName>All Public &lt; 40k</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>