force-app/main/default/objects/Account/fields/Short_Comment__c.field-meta.xml
<CustomField>
    <fullName>Short_Comment__c</fullName>
    <label>Short Comment</label>
    <type>TextArea</type>
</CustomField>