force-app/main/default/objects/Account/fields/Special_Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Special_Implementation_Owner__c</fullName>
    <description>Used to override the Demand Tool rule &quot;15. Update Account Implementation Coordinator to Map with Municipality Implementation Coordinator 17062020&quot;</description>
    <inlineHelpText>If there is a date in this field, the implementation coordinator will not be the same as the implementation coordinator assigned on the municipality.</inlineHelpText>
    <label>Special Implementation Owner</label>
    <type>Date</type>
</CustomField>