force-app/main/default/objects/Account/fields/Strategic__c.field-meta.xml
<CustomField>
    <fullName>Strategic__c</fullName>
    <label>Strategic</label>
    <type>Date</type>
</CustomField>