force-app/main/default/objects/Account/fields/Subscription_ACV__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ACV__c</fullName>
    <description>Count all active Subscription ACV</description>
    <inlineHelpText>Count all active Subscription ACV</inlineHelpText>
    <label>Subscription ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>