force-app/main/default/objects/Account/fields/Subscription_ACV_incl_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ACV_incl_Delivery__c</fullName>
    <label>Subscription ACV incl Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>