force-app/main/default/objects/Account/fields/Subscriptions_Expired_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Expired_Last_6_Months__c</fullName>
    <label>Subscriptions Expired Last 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>