force-app/main/default/objects/Account/fields/Sum_of_Students_Uni_C__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Students_Uni_C__c</fullName>
    <formula>Grade_0__c + Grade_1__c + Grade_2__c + Grade_3__c + Grade_4__c + Grade_5__c + Grade_6__c + Grade_7__c + Grade_8__c + Grade_9__c + Grade_10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Students Uni-C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>