force-app/main/default/objects/Account/fields/Temp_Elite_School__c.field-meta.xml
<CustomField>
    <fullName>Temp_Elite_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Elite School</label>
    <type>Checkbox</type>
</CustomField>