force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
                <color>#78C953</color>
                <label>Tier 1 (Green)</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <color>#E27001</color>
                <label>Tier 2 (Orange)</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <color>#F3D904</color>
                <label>Tier 3 (Yellow)</label>
            </value>
            <value>
                <fullName>Tier 4</fullName>
                <color>#A53711</color>
                <label>Tier 4 (Red)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>