force-app/main/default/objects/Account/fields/Total_Sales_2009_LCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_2009_LCY__c</fullName>
    <label>Total Sales 2009 LCY</label>
    <summarizedField>Ledger_Entry__c.Sales_LCY__c</summarizedField>
    <summaryFilterItems>
        <field>Ledger_Entry__c.Posting_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2009</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Ledger_Entry__c.Posting_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2009</value>
    </summaryFilterItems>
    <summaryForeignKey>Ledger_Entry__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>