force-app/main/default/objects/Account/fields/Total_Sales_LCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_LCY__c</fullName>
    <label>Total Sales LCY</label>
    <summarizedField>Ledger_Entry__c.Sales_LCY__c</summarizedField>
    <summaryForeignKey>Ledger_Entry__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>