force-app/main/default/objects/Account/fields/Udskolning__c.field-meta.xml
<CustomField>
    <fullName>Udskolning__c</fullName>
    <description>Number of students</description>
    <inlineHelpText>Number of students</inlineHelpText>
    <label>Udskolning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>