force-app/main/default/objects/Account/fields/unicname__c.field-meta.xml
<CustomField>
    <fullName>unicname__c</fullName>
    <description>Uni-C Name</description>
    <inlineHelpText>Uni-C Name</inlineHelpText>
    <label>Uni-C Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>