force-app/main/default/objects/Account/fields/URL_Zero_DK__c.field-meta.xml
<CustomField>
    <fullName>URL_Zero_DK__c</fullName>
    <formula>HYPERLINK(&quot;https://zero.clio.me/dk/clioonline.abo2/account/show?account=&quot; &amp; Clio_Account_Zero_Id__c , &quot;Link to Zero DK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links to Zero DK</inlineHelpText>
    <label>URL Zero DK</label>
    <type>Text</type>
</CustomField>