force-app/main/default/objects/Account/fields/URL_Zero_SE__c.field-meta.xml
<CustomField>
    <fullName>URL_Zero_SE__c</fullName>
    <formula>HYPERLINK(&quot;https://zero.clio.me/se/clioonline.abo2/account/show?account=&quot; &amp; Clio_Account_Zero_Id__c ,&quot;Link to Zero SE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Zero SE</label>
    <type>Text</type>
</CustomField>