force-app/main/default/objects/Account/fields/Usage_Band__c.field-meta.xml
<CustomField>
    <fullName>Usage_Band__c</fullName>
    <formula>IF(  Products_Purchased_All_Relevant__c  &lt; 0.2, &quot;D. 0-20%&quot; ,
IF( Products_Purchased_All_Relevant__c &lt; 0.5, &quot;C. 20-50%&quot; ,
IF( Products_Purchased_All_Relevant__c &lt; 0.8, &quot;B. 50-80%&quot; ,
IF( Products_Purchased_All_Relevant__c &lt; 1.00, &quot;A2. 80-99%&quot;,
IF( Products_Purchased_All_Relevant__c &gt;= 1.00, &quot;A1. 100%&quot; ,&quot;&quot; 
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Band</label>
    <type>Text</type>
</CustomField>