force-app/main/default/objects/Account/fields/Usage_Band_WF__c.field-meta.xml
<CustomField>
    <fullName>Usage_Band_WF__c</fullName>
    <label>Usage Band WF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>