force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <description>(DK Input Only) - 8 characters, no spaces. 
(SE) Please use the CVR/Org. number field. For SE accounts the field is updated from NAV.</description>
    <externalId>true</externalId>
    <inlineHelpText>DK input only (8 characters, no spaces). Please use the CVR/Org. number field above for Sweden.</inlineHelpText>
    <label>VAT Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>