force-app/main/default/objects/Account/fields/Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Won Opportunities</label>
    <type>Checkbox</type>
</CustomField>