force-app/main/default/objects/Account/fields/ws17agreement__c.field-meta.xml
<CustomField>
    <fullName>ws17agreement__c</fullName>
    <label>WS 17 Agreement Date</label>
    <type>Date</type>
</CustomField>