force-app/main/default/objects/Account/fields/ws22agreement__c.field-meta.xml
<CustomField>
    <fullName>ws22agreement__c</fullName>
    <label>WS 22 Agreement Date</label>
    <type>Date</type>
</CustomField>