force-app/main/default/objects/Account/fields/ws71agreement__c.field-meta.xml
<CustomField>
    <fullName>ws71agreement__c</fullName>
    <label>WS 77 Agreement Date</label>
    <type>Date</type>
</CustomField>