force-app/main/default/objects/Account/fields/X10_klasse__c.field-meta.xml
<CustomField>
    <fullName>X10_klasse__c</fullName>
    <label>10. klasse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>