force-app/main/default/objects/Account/validationRules/Account_Name_50_Max_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_50_Max_Characters</fullName>
    <active>false</active>
    <description>Account Name needs to be less than 50 Characters, else they&apos;re not created in NAV.</description>
    <errorConditionFormula>LEN( Name ) &gt;= 51</errorConditionFormula>
    <errorMessage>The field &quot;Account Name&quot; needs to be 50 characters or less. Please shorten the name.</errorMessage>
</ValidationRule>