force-app/main/default/objects/Account/validationRules/Adress_limit_80_max_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Adress_limit_80_max_characters</fullName>
    <active>true</active>
    <description>Billing street needs to be less than 80 characters (Or Navision cant create and send invoice)</description>
    <errorConditionFormula>LEN(BillingStreet) &gt;= 81</errorConditionFormula>
    <errorMessage>The field &quot;Billing street&quot; needs to be 80 characters or less.
If you need more characters to be on a Quote, add it to the Reference Field.</errorMessage>
</ValidationRule>