force-app/main/default/objects/Account/validationRules/Billing_Country_needs_to_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Country_needs_to_be_set</fullName>
    <active>false</active>
    <description>Check if Billing Country has been specified!</description>
    <errorConditionFormula>ISBLANK( BillingCountry )</errorConditionFormula>
    <errorMessage>Specify Billing Address Country</errorMessage>
</ValidationRule>