force-app/main/default/objects/Account/validationRules/Do_not_Convert_a_lead_to_a_new_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_Convert_a_lead_to_a_new_account</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(CONTAINS($Profile.Name  , &quot;System&quot;)) &amp;&amp;
ISNEW()</errorConditionFormula>
    <errorMessage>Please select an existing account !</errorMessage>
</ValidationRule>