force-app/main/default/objects/Account/listViews/Accounts_with_Renewals_Next_Year_DK.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Renewals_Next_Year_DK</fullName>
    <booleanFilter>(1 OR 2) and 3</booleanFilter>
    <columns>Municipality_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Implementation_Coordinator__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Subscription_ACV__c</columns>
    <columns>ACV_Expiring_this_year__c</columns>
    <columns>ACV_Expiring_Next_Year__c</columns>
    <columns>Sales_Impl_Meeting__c</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACV_Expiring_this_year__c</field>
        <operation>greaterThan</operation>
        <value>SEK 0</value>
    </filters>
    <filters>
        <field>ACV_Expiring_Next_Year__c</field>
        <operation>greaterThan</operation>
        <value>SEK 0</value>
    </filters>
    <filters>
        <field>Market__c</field>
        <operation>notEqual</operation>
        <value>Sweden</value>
    </filters>
    <label>Accounts with Upcoming Renewals - DK</label>
    <sharedTo>
        <role>Chief_Business_Officer</role>
        <role>Country_Manager_DK</role>
        <role>Implementation_DK</role>
        <role>Sales_Management_DK</role>
        <role>Sales_Team_DK</role>
    </sharedTo>
</ListView>